--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,5 +41,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>A helyadataidat csak a közeledben levő járatok megkereséséhez fogjuk használni.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>A helyadataidat csak a közeledben levő járatok megkereséséhez fogjuk használni.</string>
 </dict>
 </plist>
