--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
 
   location: ^3.0.0
 
+  http: any
+
 dev_dependencies:
   flutter_launcher_icons: "^0.7.5"
 
@@ -33,13 +35,16 @@ flutter:
     - assets/svg/terminus.svg
 
   fonts:
-    - family: Muli
+    - family: OpenSans
       fonts:
         - asset: assets/font/OpenSans-Bold.ttf
           weight: 700
         - asset: assets/font/OpenSans-Italic.ttf
           style: italic
         - asset: assets/font/OpenSans-Regular.ttf
+    - family: RoadRage
+      fonts:
+        - asset: assets/font/RoadRage.ttf
 
 flutter_icons:
   android: true
