--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ flutter:
     - assets/svg/bkk_tram.svg
     - assets/svg/bkk_trolley.svg
 
+    - assets/svg/artist.svg
     - assets/svg/budapest.svg
     - assets/svg/dot.svg
     - assets/svg/logo.svg
