--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -22,6 +22,15 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>A helyadataidat csak a közeledben levő járatok megkereséséhez fogjuk használni.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>A helyadataidat csak a közeledben levő járatok megkereséséhez fogjuk használni.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -41,9 +50,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>A helyadataidat csak a közeledben levő járatok megkereséséhez fogjuk használni.</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>A helyadataidat csak a közeledben levő járatok megkereséséhez fogjuk használni.</string>
 </dict>
 </plist>
